--- a/src/client/Register.ui
+++ b/src/client/Register.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>351</width>
-    <height>438</height>
+    <width>350</width>
+    <height>470</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>350</width>
+    <height>470</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>350</width>
+    <height>470</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -21,128 +33,9 @@ QLineEdit{
 	border-top:0px;
 	border-bottom:2px solid;
 }
-QPushButton
-{
-	background:white;
-	border:0px;
-}
-QPushButton[text=&quot;登录&quot;]
-{
-	background:black;
-	color:white;
-	border:2px groove;
-	border-radius:6px;
-}</string>
+
+</string>
   </property>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>351</width>
-     <height>39</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="barTitle">
-    <property name="spacing">
-     <number>0</number>
-    </property>
-    <property name="leftMargin">
-     <number>3</number>
-    </property>
-    <property name="rightMargin">
-     <number>6</number>
-    </property>
-    <item>
-     <widget class="QLabel" name="lableTitle">
-      <property name="font">
-       <font>
-        <family>微软雅黑</family>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Matrix</string>
-      </property>
-      <property name="textFormat">
-       <enum>Qt::AutoText</enum>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-      </property>
-      <property name="margin">
-       <number>7</number>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="btMinimize">
-      <property name="minimumSize">
-       <size>
-        <width>30</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>30</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton:hover{
-	image:url(:/icon/minAnti);
-}
-QPushButton{
-	image:url(:/icon/min);
-}</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>800</width>
-        <height>30</height>
-       </size>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="btShutdown">
-      <property name="minimumSize">
-       <size>
-        <width>30</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>30</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton:hover{
-	image:url(:/icon/shutAnti);
-}
-QPushButton{
-	image:url(:/icon/shut);
-}</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>50</width>
-        <height>30</height>
-       </size>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QPushButton" name="btFinishRegister">
    <property name="geometry">
     <rect>
@@ -164,6 +57,17 @@ QPushButton{
      <height>50</height>
     </size>
    </property>
+   <property name="font">
+    <font>
+     <family>微软雅黑</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton:hover{
+	background:rgb(62, 62, 62);
+}</string>
+   </property>
    <property name="text">
     <string>完成注册</string>
    </property>
@@ -172,39 +76,14 @@ QPushButton{
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>90</y>
-     <width>301</width>
+     <y>80</y>
+     <width>281</width>
      <height>191</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="layoutRegister">
     <item>
      <layout class="QHBoxLayout" name="layoutUserName">
-      <item>
-       <widget class="QLabel" name="labelUserName">
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="font">
-         <font>
-          <family>微软雅黑</family>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>用户名</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <widget class="QLineEdit" name="lineEditUserName">
         <property name="minimumSize">
@@ -219,37 +98,18 @@ QPushButton{
           <pointsize>10</pointsize>
          </font>
         </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="placeholderText">
+         <string> 用户名</string>
+        </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="layoutPssowrd">
-      <item>
-       <widget class="QLabel" name="labelPassword">
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="font">
-         <font>
-          <family>微软雅黑</family>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>密码</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <widget class="QLineEdit" name="lineEditPassword">
         <property name="minimumSize">
@@ -273,37 +133,15 @@ QPushButton{
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
+        <property name="placeholderText">
+         <string> 密码</string>
+        </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="layoutPssowrd_2">
-      <item>
-       <widget class="QLabel" name="labelPassword_2">
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="font">
-         <font>
-          <family>微软雅黑</family>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>密码</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <widget class="QLineEdit" name="lineEditPassword_2">
         <property name="minimumSize">
@@ -327,6 +165,9 @@ QPushButton{
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
+        <property name="placeholderText">
+         <string> 确认密码</string>
+        </property>
        </widget>
       </item>
      </layout>
@@ -337,13 +178,45 @@ QPushButton{
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
+     <y>400</y>
      <width>93</width>
      <height>28</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>微软雅黑</family>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton:hover{
+	color: rgb(107, 107, 107);
+}</string>
+   </property>
    <property name="text">
     <string>返回</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelMatrix">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>40</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Yu Gothic UI</family>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>注册</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
